[package]
name = "namada-supply-webserver"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
    "buffer",
] }
tower-http = { version = "0.5.0", features = [
    "compression-full",
    "limit",
    "trace",
    "cors",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
axum-macros = "0.4.1"
namada_sdk = { version = "0.149.1", default-features = false, features = ["std", "async-send", "download-params"] }
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
thiserror = "1.0.56"
clap-verbosity-flag = "2.1.1"
anyhow = "1.0.75"
lazy_static = "1.4.0"
moka = { version = "0.12", features = ["future"] }

[build-dependencies]
vergen = {version = "8.0.0", features = ["build", "git", "gitcl"] }